# vidsteps

./: LICENSE  README.md  pyproject.toml
src/vidsteps/: __main__.py
