[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidsteps"
version = "0.1.0"
description = "Play a video one step at a time."
readme = "README.md"
authors = [{ name = "David Hashe" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["video"]
dependencies = [
    "appdirs>=1.4.4",
    "moviepy>=1.0.3",
    "opencv-python>=4.10.0.84",
    "pygame>=2.6.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/dhashe/vidsteps"

[project.scripts]
vidsteps = "vidsteps.__main__:main"
