[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidsteps"
version = "0.1.0"
description = "Play a video one step at a time."
readme = "README.md"
authors = [{ name = "David Hashe" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["video"]
dependencies = [
    # moviepy is not actively maintained, and some fixes that we
    # need are not yet on pypi
    "moviepy@git+https://github.com/Zulko/moviepy.git",

    "appdirs>=1.4.4",
    "opencv-python>=4.10.0.84",
    "pygame>=2.6.0",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/dhashe/vidsteps"

[project.scripts]
vidsteps = "vidsteps.__main__:main"
